Ensure viewer error is readable

--- a/app/Resources/scss/sections/_scan.scss
+++ b/app/Resources/scss/sections/_scan.scss
@@ -5,7 +5,7 @@
 
 .scan_error {
     align-items: center;
-    color: $highlight-color;
+    color: $white;
     font-weight: bold;
     display: flex;
     height: 100%;
